# rust-web-tcg

./: Cargo.toml  index.html  zerops.yml
assets/: main.css
components/: cards.jsx  data.jsx  snippets.jsx
data/: cards.json
src/: data.rs  main.rs
